2007-06-01  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxComponentEditor.m ([UIxComponentEditor
	-toolbar]): determine the toolbar filename based on the
	permissions declared by the securitymanager. The role mechanism
	has been adjusted on a lowerlevel so we can simplify the code.

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-initWithName:newNameinContainer:newContainer]): read the content
	directly from here. That way we can determine whether the object
	is being created.
	([SOGoContentObject -aclsForUser:uid]): if the object is new and
	the ObjectCreator role is enabled, we also grant the ObjectEditor
	role to the current user.

	* UI/Common/UIxFolderActions.m ([-canAccessContentAction]):
	changed the method paradigm to only return HTTP code 204. Not test
	is done whatsoever since the security manager does it for us.

	* UI/Contacts/UIxContactsListView.m ([-canAccessContentAction]):
	removed method because the same exists in UIxFolderActions.m

	* UI/Contacts/UIxContactsUserRightsEditor.m
	([UIxContactsUserRightsEditor
	-setUserCanReadObjects:userCanReadObjects]): new method.

	* SoObjects/SOGo/SOGoPermissions.m: added roles "FolderViewer" and
	"FolderEraser" and special permission "Access Object". Removed
	role "SOGoMailRole_MessageEraser" since "SOGoRole_ObjectEraser"
	can be used instead. Removed "FolderReader" since it is useless.

	* SoObjects/Contacts/SOGoContactGCSEntry.m ([SOGoContactGCSEntry
	-vCard]): directly use the "content" ivar since it is initialized
	during object creation.

	* SoObjects/Contacts/SOGoContactLDAPFolder.m
	([SOGoContactLDAPFolder -init]): no longer handle the
	nameInContainer no the container ivars. They were removed because
	this class is a descendant of SOGoObject which already has them.
	([SOGoContactLDAPFolder -davDisplayName]): new overriden method
	returning "displayName".
	([SOGoContactLDAPFolder -isFolderish]): new overriden method
	returning "YES".
